--- a/WebChat/WebChat.Models/WebChat.Models.csproj
+++ b/WebChat/WebChat.Models/WebChat.Models.csproj
@@ -39,7 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="FileMessage.cs" />
+    <Compile Include="MessageBase.cs" />
+    <Compile Include="TextMessage.cs" />
+    <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
