Fixing UserController.cs to get all users.

--- a/WebChat/WebChat.Service/WebChat.Service.csproj
+++ b/WebChat/WebChat.Service/WebChat.Service.csproj
@@ -148,7 +148,7 @@
     <Compile Include="Controllers\BaseControllerTemp.cs" />
     <Compile Include="Models\DefaultDependencyResolver.cs" />
     <Compile Include="Models\UnitOfWork.cs" />
-    <Compile Include="Controllers\UserControllerTemp.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
