Added service to upload picture

--- a/WebChat/WebChat.Data/WebChat.Data.csproj
+++ b/WebChat/WebChat.Data/WebChat.Data.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DropBoxUploader.cs" />
     <Compile Include="Repositories\DatabaseRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\IRepositoryAsync.cs" />
