--- a/WebChat/WebChat.WebClient/WebChat.WebClient.csproj
+++ b/WebChat/WebChat.WebClient/WebChat.WebClient.csproj
@@ -65,6 +65,7 @@
     <Content Include="Scripts\persister.js" />
     <Content Include="Scripts\ui.js" />
     <Content Include="Styles\style.css" />
+    <Content Include="TestIndex.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
