Super mega giga big commit - fixing controllers (working correctly now) and client interface.

--- a/WebChat/WebChat.Service/WebChat.Service.csproj
+++ b/WebChat/WebChat.Service/WebChat.Service.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Models\DefaultDependencyResolver.cs" />
+    <Compile Include="Models\TextMessageInfo.cs" />
     <Compile Include="Models\UnitOfWork.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
