Implementing pubnub functionality but using only one channel.

--- a/WebChat/WebChat.Data/WebChat.Data.csproj
+++ b/WebChat/WebChat.Data/WebChat.Data.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DropBoxUploader.cs" />
+    <Compile Include="PubnubApi.cs" />
+    <Compile Include="PubnubContext.cs" />
     <Compile Include="Repositories\DatabaseRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\IRepositoryAsync.cs" />
