Add database indices

--- a/WebChat/WebChat.ConsoleClient/WebChat.ConsoleClient.csproj
+++ b/WebChat/WebChat.ConsoleClient/WebChat.ConsoleClient.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +49,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WebChat.Data\WebChat.Data.csproj">
+      <Project>{f619c379-c91e-4a31-ade6-4cfc9175359b}</Project>
+      <Name>WebChat.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WebChat.Models\WebChat.Models.csproj">
+      <Project>{94bf67c4-636d-4c4c-a44a-9fdadc7e3533}</Project>
+      <Name>WebChat.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
