--- a/WebChat/WebChat.Service/WebChat.Service.csproj
+++ b/WebChat/WebChat.Service/WebChat.Service.csproj
@@ -145,7 +145,7 @@
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\BaseControllerTemp.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Models\DefaultDependencyResolver.cs" />
     <Compile Include="Models\UnitOfWork.cs" />
