--- a/WebChat/packages/repositories.config
+++ b/WebChat/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\WebChat.ConsoleClient\packages.config" />
   <repository path="..\WebChat.Data\packages.config" />
+  <repository path="..\WebChat.Models\packages.config" />
   <repository path="..\WebChat.Service.Tests\packages.config" />
   <repository path="..\WebChat.Service\packages.config" />
 </repositories>
