--- a/WebChat/packages/repositories.config
+++ b/WebChat/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\WebChat.ConsoleClient\packages.config" />
   <repository path="..\WebChat.Data\packages.config" />
   <repository path="..\WebChat.Models\packages.config" />
+  <repository path="..\WebChat.Repositories.Tests\packages.config" />
   <repository path="..\WebChat.Service.Tests\packages.config" />
   <repository path="..\WebChat.Service\packages.config" />
 </repositories>
